--- a/src/index.css
+++ b/src/index.css
@@ -58,8 +58,18 @@
   width: 100%;
 }
 
+@media only screen and (max-width: 375px) {
+ 
+ .bg-hero{
+    height: 150vh;
+ }
+    /* Styles for iPhone SE and similar small devices */
+}
 
-
+.img-hero{
+    margin-top: 5px;
+    width: 600px;
+}
 
 .bg-color{
     background:linear-gradient(to right, #E5E0DA 0%,#BEB0A6 92%);
@@ -99,9 +109,9 @@
     color: #704C32;
 }
 
-.bg-hero {
+.bg-hero{
     background: radial-gradient(circle at center,#95836B 0%, #704C32  100%);
-    height: 100vh;
+    height: 113vh;
 }
 
 nav{
